tests/ui/error-codes/E0388.stderr
warning: taking a mutable reference to a `const` item
  --> $DIR/E0388.rs:4:30
   |
LL | const CR: &'static mut i32 = &mut C;
   |                              ^^^^^^
   |
   = note: each usage of a `const` item creates a new temporary
   = note: the mutable reference will refer to this temporary, not the original `const` item
note: `const` item defined here
  --> $DIR/E0388.rs:2:1
   |
LL | const C: i32 = 2;
   | ^^^^^^^^^^^^
   = note: `#[warn(const_item_mutation)]` on by default

error[E0764]: mutable references are not allowed in the final value of constants
  --> $DIR/E0388.rs:4:30
   |
LL | const CR: &'static mut i32 = &mut C;
   |                              ^^^^^^

error[E0658]: mutable references are not allowed in statics
  --> $DIR/E0388.rs:7:39
   |
LL | static STATIC_REF: &'static mut i32 = &mut X;
   |                                       ^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

warning: taking a mutable reference to a `const` item
  --> $DIR/E0388.rs:9:38
   |
LL | static CONST_REF: &'static mut i32 = &mut C;
   |                                      ^^^^^^
   |
   = note: each usage of a `const` item creates a new temporary
   = note: the mutable reference will refer to this temporary, not the original `const` item
note: `const` item defined here
  --> $DIR/E0388.rs:2:1
   |
LL | const C: i32 = 2;
   | ^^^^^^^^^^^^

error[E0764]: mutable references are not allowed in the final value of statics
  --> $DIR/E0388.rs:9:38
   |
LL | static CONST_REF: &'static mut i32 = &mut C;
   |                                      ^^^^^^

error: aborting due to 3 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0658, E0764.
For more information about an error, try `rustc --explain E0658`.
